# benchMark_suite

./: CMakeLists.txt  README.md  build_project.sh  profiling_report.txt
BenchMarkScore/: score.txt
include/: BranchIntensiveTask.h  Chrono_timer.h  ComputationalIntensiveTask.h  MemoryIntensiveCalculator.h  SystemConfiguration.h  TimePrinter.h
src/: BranchIntensiveTask.cpp  Chrono_timer.cpp  ComputationalIntensiveTask.cpp  MemoryIntensiveCalculator.cpp  SystemConfiguration.cpp  TimePrinter.cpp  main.cpp
